<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>me.aj4real.tagseditor</groupId>
        <artifactId>parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>dist</artifactId>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${craftbukkit.version}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>plugin</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_17</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_17_1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_18</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_18_1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_18_2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_19</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_19_1</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>v1_19_2</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>denizenimpl</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.aj4real.tagseditor</groupId>
            <artifactId>paper</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>../dist/src/main/resources</directory>
                <includes>
                    <include>*.mid</include>
                </includes>
            </resource>
            <resource>
                <filtering>true</filtering>
                <directory>../dist/src/main/resources</directory>
                <includes>
                    <include>*.yml</include>
                    <include>*.dsc</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                            <filters>
                                <filter>
                                    <artifact>me.aj4real:tagseditor</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>me.aj4real:tagseditor-paper</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
<!--                                <filter>-->
<!--                                    <artifact>me.aj4real:tagseditor-v1_17</artifact>-->
<!--                                    <includes>-->
<!--                                        <include>**</include>-->
<!--                                    </includes>-->
<!--                                </filter>-->
<!--                                <filter>-->
<!--                                    <artifact>me.aj4real:tagseditor-v1_17_1</artifact>-->
<!--                                    <includes>-->
<!--                                        <include>**</include>-->
<!--                                    </includes>-->
<!--                                </filter>-->
<!--                                <filter>-->
<!--                                    <artifact>me.aj4real:tagseditor-v1_18</artifact>-->
<!--                                    <includes>-->
<!--                                        <include>**</include>-->
<!--                                    </includes>-->
<!--                                </filter>-->
<!--                                <filter>-->
<!--                                    <artifact>me.aj4real:tagseditor-v1_18_1</artifact>-->
<!--                                    <includes>-->
<!--                                        <include>**</include>-->
<!--                                    </includes>-->
<!--                                </filter>-->
<!--                                <filter>-->
<!--                                    <artifact>me.aj4real:tagseditor-v1_18_2</artifact>-->
<!--                                    <includes>-->
<!--                                        <include>**</include>-->
<!--                                    </includes>-->
<!--                                </filter>-->
                                <filter>
                                    <artifact>me.aj4real:tagseditor-denizenimpl</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                            </filters>
                            <relocations>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <finalName>tagseditor</finalName>
                    <outputDirectory>../target</outputDirectory>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
